--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
     "build": "^0.1.4",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
